# ROCKET_BOLTZ

./: .gitignore  .pre-commit-config.yaml  BOLTZ2_IMPLEMENTATION.md  BOLTZ2_PAIR_BIAS_ANALYSIS.md  BOLTZ2_THEORY.md  README.md  benchmark_rocket.sh  cap_bfactors.py  debug_boltz2.py  debug_boltz2_v2.py  debug_boltz2_v3.py  debug_boltz2_v4.py  debug_boltz2_v5.py  debug_boltz2_v6.py  debug_timing.py  debug_v4_output.txt  debug_v5_output.txt  debug_v6_output.txt  download_pdb_data.sh  pyproject.toml
benchmark_ddim10_best/: SUMMARY.txt  refined_001.cif  refined_001.eff  refined_001.mtz  refined_002.def
benchmark_ddim_10re/: SUMMARY.txt  refined_001.cif  refined_001.eff  refined_001.mtz  refined_002.def
benchmark_rocket_mine/: SUMMARY.txt  refined_001.cif  refined_001.eff  refined_001.mtz  refined_002.def
benchmark_rocket_og/: SUMMARY.txt  refined_001.cif  refined_001.eff  refined_001.mtz  refined_002.def
benchmark_rocket_original/: SUMMARY.txt  refined_001.cif  refined_001.eff  refined_001.mtz  refined_002.def
docs/: BOLTZ2_IMPLEMENTATION.md  BOLTZ2_PAIR_BIAS_ANALYSIS.md  BOLTZ2_THEORY.md
notebooks/: RSCC_plot.ipynb
rocket/: __init__.py  base.py  boltz2_wrapper.py  coordinates.py  coordinates_boltz2.py  msa_cluster.py  msa_score.py  msacluster_utils.py  refinement_boltz2.py  refinement_config.py  refinement_cryoem.py  refinement_utils.py  refinement_xray.py  wandb_logger.py
rocket/boltz2/: __init__.py  coordinates.py  refinement.py  wrapper.py
rocket/scripts/: generate_msa.py  run_msacluster.py  run_msascore.py  run_prep_boltz2.py  run_preprocess.py  run_pretrained_openfold.py  run_refine.py
rocket/xtal/: targets.py
test/unit/: test_refinement_utils.py
tests/: test_boltz2_pipeline.py
tools/: README.md  benchmark_rocket.sh  bfactor_reset_by_rscc.py  crystalboltz_cc.py  download_pdb_data.sh  rmsd_breakdown.py
